MID-8095 Role names without spaces are not wraping correctly

--- a/gui/admin-gui/src/frontend/scss/_tiles.scss
+++ b/gui/admin-gui/src/frontend/scss/_tiles.scss
@@ -73,6 +73,10 @@
     top: -20px;
     left: 32px;
   }
+
+  & > .title {
+    word-break: break-all;
+  }
 }
 
 @include dark-mode() {
